--- a/SagaMissingMessages/App.config
+++ b/SagaMissingMessages/App.config
@@ -1,33 +1,71 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <configuration>
   <configSections>
-    <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core" />
-    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
-    <section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core" />
+    <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core"/>
+    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core"/>
+    <section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core"/>
+    <section name="TransportConfig" type="NServiceBus.Config.TransportConfig, NServiceBus.Core"  />
+    <section name="oracle.manageddataaccess.client"
+      type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
+      <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+          <section name="ConversationPessimisticLocker.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+      </sectionGroup>
   </configSections>
-  <!--<MessageForwardingInCaseOfFaultConfig 
-    ErrorQueue="The queue to which errors will be forwarded." />-->
-  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
-  <!--<UnicastBusConfig 
-    DistributorControlAddress="The address for sending control messages to the distributor."
-    DistributorDataAddress="The distributor's data address, used as the return address of messages sent by this endpoint."
-    TimeoutManagerAddress="The address that the timeout manager will use to send and receive messages." >
-    <MessageEndpointMappings>
-      To register all message types defined in an assembly:
-      <add Assembly="assembly" Endpoint="queue@machinename" />
-      
-      To register all message types defined in an assembly with a specific namespace (it does not include sub namespaces):
-      <add Assembly="assembly" Namespace="namespace" Endpoint="queue@machinename" />
-      
-      To register a specific type in an assembly:
-      <add Assembly="assembly" Type="type fullname (http://msdn.microsoft.com/en-us/library/system.type.fullname.aspx)" Endpoint="queue@machinename" />
-    </MessageEndpointMappings>
-  </UnicastBusConfig>-->
-  <UnicastBusConfig>
-    <MessageEndpointMappings />
+
+  <TransportConfig MaximumConcurrencyLevel="32" MaxRetries="5" MaximumMessageThroughputPerSecond="0"  />
+    
+  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error"/>
+
+
+    <appSettings>
+        <add key="NServiceBus/Persistence/NHibernate/dialect" value="NHibernate.Dialect.Oracle10gDialect"/>
+        <add key="NServiceBus/Persistence/NHibernate/connection.provider" value="NHibernate.Connection.DriverConnectionProvider"/>
+        <add key="NServiceBus/Persistence/NHibernate/connection.driver_class" value="NHibernate.Driver.OracleManagedDataClientDriver"/>
+        <add key="NServiceBus/LicensePath" value="C:\License.xml"/>
+    </appSettings>
+
+    <connectionStrings>
+        <add name="NServiceBus/Persistence"
+            connectionString="Data Source=localhost:1521/xe;Persist Security Info=True;User ID=CONCEPT;Password=CONCEPT;Connection Timeout=60"
+            providerName="Oracle.ManagedDataAccess.Client"/>
+
+    </connectionStrings>
+
+    <UnicastBusConfig>
+      <MessageEndpointMappings>
+          <add Assembly="Messages" Endpoint="NormalHandler"/>
+      </MessageEndpointMappings>
   </UnicastBusConfig>
-  <!--<AuditConfig 
-    QueueName="The address to which messages received will be forwarded."
-    OverrideTimeToBeReceived="The time to be received set on forwarded messages, specified as a timespan see http://msdn.microsoft.com/en-us/library/vstudio/se73z7b9.aspx"  />-->
-  <AuditConfig QueueName="audit" />
+ 
+  <AuditConfig QueueName="audit"/>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="Oracle.ManagedDataAccess.Client"/>
+      <add name="ODP.NET, Managed Driver" invariant="Oracle.ManagedDataAccess.Client" description="Oracle Data Provider for .NET, Managed Driver"
+        type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
+    </DbProviderFactories>
+  </system.data>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <publisherPolicy apply="no"/>
+        <assemblyIdentity name="Oracle.ManagedDataAccess" publicKeyToken="89b483f429c47342" culture="neutral"/>
+        <bindingRedirect oldVersion="4.121.0.0 - 4.65535.65535.65535" newVersion="4.121.2.0"/>
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+  <oracle.manageddataaccess.client>
+    <version number="*">
+      <dataSources>
+        <dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) "/>
+      </dataSources>
+    </version>
+  </oracle.manageddataaccess.client>
+    <applicationSettings>
+        <ConversationPessimisticLocker.Properties.Settings>
+            <setting name="EnablePessimisticLock" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </ConversationPessimisticLocker.Properties.Settings>
+    </applicationSettings>
 </configuration>
