--- a/SagaMissingMessages/packages.config
+++ b/SagaMissingMessages/packages.config
@@ -5,4 +5,5 @@
   <package id="NServiceBus" version="5.0.6" targetFramework="net451" />
   <package id="NServiceBus.Host" version="6.0.0" targetFramework="net451" />
   <package id="NServiceBus.NHibernate" version="6.2.5" targetFramework="net451" />
+  <package id="Oracle.ManagedDataAccess" version="12.1.2400" targetFramework="net451" />
 </packages>
