--- a/SagaMissingMessages/App.config
+++ b/SagaMissingMessages/App.config
@@ -17,21 +17,32 @@
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="error"/>
 
 
+    <!-- sql server -->
+    <!--
+    <connectionStrings>
+        <add name="NServiceBus/Persistence"
+            connectionString="Server=PABLO-PC\SQLEXPRESS;Database=NSBPERSISTENCE;Trusted_Connection=True;"      />
+
+    </connectionStrings>-->
+
+    <!-- oracle -->
+    
     <appSettings>
         <add key="NServiceBus/Persistence/NHibernate/dialect" value="NHibernate.Dialect.Oracle10gDialect"/>
         <add key="NServiceBus/Persistence/NHibernate/connection.provider" value="NHibernate.Connection.DriverConnectionProvider"/>
         <add key="NServiceBus/Persistence/NHibernate/connection.driver_class" value="NHibernate.Driver.OracleManagedDataClientDriver"/>
         <add key="NServiceBus/LicensePath" value="C:\License.xml"/>
     </appSettings>
-
+    
     <connectionStrings>
         <add name="NServiceBus/Persistence"
             connectionString="Data Source=localhost:1521/xe;Persist Security Info=True;User ID=CONCEPT;Password=CONCEPT;Connection Timeout=60"
             providerName="Oracle.ManagedDataAccess.Client"/>
-
+    
     </connectionStrings>
 
-    <UnicastBusConfig>
+
+<UnicastBusConfig>
       <MessageEndpointMappings>
           <add Assembly="Messages" Endpoint="NormalHandler"/>
       </MessageEndpointMappings>
